GS-331 refactored examples for better unit tests