@@ -20,7 +20,7 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.koverse</groupId>
   <artifactId>koverse-spark-examples</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
   <name>${project.artifactId}</name>
 
   <properties>
@@ -307,6 +307,26 @@ limitations under the License.
           </execution>
         </executions>
       </plugin>
+      
+      <!-- for spark-testing-base -->
+      <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.19.1</version>
+		<configuration>
+			<forkCount>1</forkCount>
+			<reuseForks>true</reuseForks>
+			<argLine>-Xmx2048m -XX:MaxPermSize=2048m</argLine>
+			<includes>
+				<include>**/*Suite.class</include>
+				<include>**/*Test.class</include>
+				<include>**/*Tests.class</include>
+				<include>**/*Spec.class</include>
+				<include>**/*Specs.class</include>
+			</includes>
+		</configuration>
+      </plugin>
+	
 
     </plugins>
   </build>
@@ -318,20 +338,24 @@ limitations under the License.
       <artifactId>koverse-sdk</artifactId>
       <version>${koverse.version}</version>
       <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.json4s</groupId>
-          <artifactId>json4s-core_2.10</artifactId>
-        </exclusion>
-      </exclusions>
+	<exclusions>
+		<exclusion>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</exclusion>
+		<exclusion>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+		</exclusion>
+		<exclusion>
+			<groupId>org.json4s</groupId>
+			<artifactId>json4s-core_2.10</artifactId>
+		</exclusion>
+		<exclusion>
+			<artifactId>servlet-api</artifactId>
+			<groupId>javax.servlet</groupId>
+		</exclusion>
+	</exclusions>
     </dependency>
 
     <dependency>
@@ -368,6 +392,33 @@ limitations under the License.
       <version>${koverse.version}</version>
       <scope>provided</scope>
     </dependency>
+    
+    <!-- spark-testing-base dependencies -->
+   	<dependency>
+	    <groupId>com.holdenkarau</groupId>
+	    <artifactId>spark-testing-base_2.10</artifactId>
+	    <version>1.5.1_0.3.3</version>
+	    <scope>test</scope>
+	    <exclusions>
+	    	<exclusion>
+	    		<artifactId>jetty</artifactId>
+	    		<groupId>org.mortbay.jetty</groupId>
+	    	</exclusion>
+	    	<exclusion>
+	    		<artifactId>jetty-util</artifactId>
+	    		<groupId>org.mortbay.jetty</groupId>
+	    	</exclusion>
+	    </exclusions>
+   	</dependency>
+
+	<dependency>
+		<groupId>org.apache.spark</groupId>
+		<artifactId>spark-hive_2.10</artifactId>
+		<version>1.5.1</version>
+		<scope>test</scope>
+	</dependency>
+	<!-- end spark-testing-base dependencies -->
+	
   </dependencies>
 
   <repositories>
